test/cases/compile_errors/redefinition_of_global_variables.zig
var a: i32 = 1;
var a: i32 = 2;

// error
// backend=stage2
// target=native
//
// :2:1: error: redeclaration of 'a'
// :1:1: note: other declaration here
